<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deals"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_deals" />
        <!--<item-->
        <!--android:id="@+id/nav_camera"-->
        <!--android:icon="@drawable/ic_menu_camera"-->
        <!--android:title="Import" />-->
        <!--<item-->
        <!--android:id="@+id/nav_gallery"-->
        <!--android:icon="@drawable/ic_menu_gallery"-->
        <!--android:title="Gallery" />-->
        <!--<item-->
        <!--android:id="@+id/nav_slideshow"-->
        <!--android:icon="@drawable/ic_menu_slideshow"-->
        <!--android:title="Slideshow" />-->
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>

    <group
        android:id="@+id/drawer_menu_mid"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category1"
            android:title="@string/nav_category1" />
        <item
            android:id="@+id/nav_category2"
            android:title="@string/nav_category2" />
        <item
            android:id="@+id/nav_category3"
            android:title="@string/nav_category3" />
        <item
            android:id="@+id/nav_category4"
            android:title="@string/nav_category4" />
    </group>

    <group
        android:id="@+id/drawer_menu_bottom"
        android:checkableBehavior="none">
        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>
    </group>
</menu>
